updated the various Makefile.am to use include Makefile.tools

--- a/tools/tracedump/Makefile.am
+++ b/tools/tracedump/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = tracedump
 
+include ../Makefile.tools
 tracedump_SOURCES = tracedump.cc
 tracedump_LDADD = -ltrace -lpacketdump -ldl
-tracedump_LDFLAGS = -L$(prefix)/lib/ -L$(top_srcdir)/lib/
