--- a/tools/tracemerge/Makefile.am
+++ b/tools/tracemerge/Makefile.am
@@ -1,5 +1,4 @@
 bin_PROGRAMS = tracemerge
 
+include ../Makefile.tools
 tracemerge_SOURCES = tracemerge.c
-tracemerge_LDADD = -ltrace 
-tracemerge_LDFLAGS = -L$(prefix)/lib/ -L$(top_srcdir)/lib/
