--- a/tools/tracereport/Makefile.am
+++ b/tools/tracereport/Makefile.am
@@ -1,5 +1,4 @@
 bin_PROGRAMS = tracereport
 
+include ../Makefile.tools
 tracereport_SOURCES = tracereport.c tracereport.h tree.c tree.h report.h ttl_report.c tos_report.c port_report.c error_report.c flow_report.c
-tracereport_LDADD = -ltrace 
-tracereport_LDFLAGS = -L$(prefix)/lib/ -L$(top_srcdir)/lib/
