--- a/tools/tracesplit/Makefile.am
+++ b/tools/tracesplit/Makefile.am
@@ -2,6 +2,5 @@ bin_PROGRAMS = tracesplit
 bin_SCRIPTS = tracefilter traceconvert
 
 man1_MANS = tracesplit.1 tracefilter.1 traceconvert.1
+include ../Makefile.tools
 tracesplit_SOURCES = tracesplit.c
-tracesplit_LDADD = -ltrace
-tracesplit_LDFLAGS = -L$(prefix)/lib/ -L$(top_srcdir)/lib/
