--- a/tools/Makefile.tools
+++ b/tools/Makefile.tools
@@ -1,3 +1,3 @@
-AM_CFLAGS=-I$(top_srcdir)/lib
-AM_CPPFLAGS=-I$(top_srcdir)/lib
-AM_LDFLAGS=-L$(top_srcdir)/lib -ltrace
+AM_CFLAGS=-I$(top_srcdir)/lib -I$(top_srcdir)/libpacketdump
+AM_CPPFLAGS=-I$(top_srcdir)/lib -I$(top_srcdir)/libpacketdump
+AM_LDFLAGS=-L$(top_srcdir)/lib -I$(top_srcdir)/libpacketdump -ltrace
