adding extra expando to Makefile.am (LTLIBOBJS)

--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -14,7 +14,7 @@ libpacketdump_la_SOURCES = libpacketdump.cc $(PLUGINSOURCES)
 PLUGINDIR=$(libdir)/libpacketdump
 
 INCLUDES= @ADD_INCLS@ -I../lib -I../
-libpacketdump_la_LIBADD = @ADD_LIBS@  -ldl
+libpacketdump_la_LIBADD = @ADD_LIBS@  @LTLIBOBJS@ -ldl
 libpacketdump_la_LDFLAGS=-version-info 2:24:0 @ADD_LDFLAGS@
 
 AM_CXXFLAGS=-g -Wall -DDIRNAME=\"$(PLUGINDIR)\" -rdynamic $(INCLUDES)
