--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -8,6 +8,7 @@ if LIBGDC
 TRACERTSTATS_DIR=tracertstats
 endif
 
+extra_DIST=tracereport
 if LIBTRACE_TOOLS
 SUBDIRS=traceanon tracemerge tracesplit $(TRACEDUMP_DIR) $(TRACERTSTATS_DIR)
 else
