setting EXTRA_DIST properly: including all of tools/tracereport (tools/Makefile.am) and including $(man_MANS) and $(bin_SCRIPTS) in traceanon and tracesplit

--- a/tools/traceanon/Makefile.am
+++ b/tools/traceanon/Makefile.am
@@ -1,5 +1,7 @@
 bin_PROGRAMS = traceanon
 
-man1_MANS = traceanon.1
+man_MANS = traceanon.1
+EXTRA_DIST = $(man_MANS)
+
 include ../Makefile.tools
-traceanon_SOURCES = traceanon.c rijndael.h rijndael.c panon.h panon.c ipenc.c ipenc.h
+traceanon_SOURCES = traceanon.c rijndael.h rijndael.c panon.h panon.c ipenc.c ipenc.h 
