--- a/tools/tracesplit/Makefile.am
+++ b/tools/tracesplit/Makefile.am
@@ -1,6 +1,8 @@
 bin_PROGRAMS = tracesplit
 bin_SCRIPTS = tracefilter traceconvert
 
-man1_MANS = tracesplit.1 tracefilter.1 traceconvert.1
+man_MANS = tracesplit.1 tracefilter.1 traceconvert.1
+EXTRA_DIST = $(man_MANS) $(bin_SCRIPTS)
+
 include ../Makefile.tools
 tracesplit_SOURCES = tracesplit.c
