Added:  * error reports  * flow reports  * per port reports  * direction report  * moved everything to use the container library

--- a/tools/tracereport/Makefile.am
+++ b/tools/tracereport/Makefile.am
@@ -1,4 +1,7 @@
 bin_PROGRAMS = tracereport
 
 include ../Makefile.tools
-tracereport_SOURCES = tracereport.c tracereport.h tree.c tree.h report.h ttl_report.c tos_report.c port_report.c error_report.c flow_report.c
+tracereport_SOURCES = tracereport.c tracereport.h report.h \
+			contain.c contain.h \
+			ttl_report.c tos_report.c port_report.c error_report.c \
+			flow_report.c dir_report.c protocol_report.c
