Don't compile the png module only

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -3,14 +3,8 @@ if LIBPACKETDUMP
 TRACEDUMP_DIR=tracedump
 endif
 
-# tracertstats depends on libgdc
-if LIBGDC
-TRACERTSTATS_DIR=tracertstats
-endif
-
-
 if LIBTRACE_TOOLS
-SUBDIRS=traceanon tracemerge tracesplit $(TRACEDUMP_DIR) $(TRACERTSTATS_DIR)
+SUBDIRS=traceanon tracemerge tracesplit tracertstats $(TRACEDUMP_DIR) $(TRACERTSTATS_DIR)
 else
 SUBDIRS=
 endif
