--- a/tools/tracertstats/Makefile.am
+++ b/tools/tracertstats/Makefile.am
@@ -1,5 +1,10 @@
 bin_PROGRAMS = tracertstats
 
+OUTPUT_MODULES=output_csv.c output_html.c
+if LIBGDC
+OUTPUT_MODULES+=output_png.c
+endif
+
 include ../Makefile.tools
-tracertstats_SOURCES = tracertstats.c output.h output.c output_csv.c output_html.c output_png.c
+tracertstats_SOURCES = tracertstats.c output.h output.c $(OUTPUT_MODULES)
 tracertstats_LDADD = -ltrace -lgdc
