adding man_MANS to EXTRA_DIST

--- a/tools/tracedump/Makefile.am
+++ b/tools/tracedump/Makefile.am
@@ -1,5 +1,6 @@
 bin_PROGRAMS = tracedump
 man_MANS = tracedump.1
+EXTRA_DIST = $(man_MANS)
 
 include ../Makefile.tools
 tracedump_SOURCES = tracedump.cc
