adding tracestats into cvs and auto*

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -4,7 +4,7 @@ TRACEDUMP_DIR=tracedump
 endif
 
 if LIBTRACE_TOOLS
-SUBDIRS=traceanon tracemerge tracesplit $(TRACEDUMP_DIR) tracertstats
+SUBDIRS=traceanon tracemerge tracesplit $(TRACEDUMP_DIR) tracertstats tracestats
 else
 SUBDIRS=
 endif
