--- a/tools/tracestats/Makefile.am
+++ b/tools/tracestats/Makefile.am
@@ -5,4 +5,4 @@ man_MANS = tracestats.1 tracesummary.1
 EXTRA_DIST = $(man_MANS) $(bin_SCRIPTS)
 
 include ../Makefile.tools
-tracemerge_SOURCES = tracestats.c
+tracestats_SOURCES = tracestats.c
