--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -5,7 +5,8 @@ extra_DIST = format_template.c
 libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h \
 		format_erf.c format_pcap.c format_wag.c format_legacy.c \
 		format_helper.c format_helper.h \
-		parse_cmd.c parse_cmd.h libtrace_int.h lt_inttypes.h
+		parse_cmd.c parse_cmd.h libtrace_int.h lt_inttypes.h \
+		linktypes.c 
 if DAG2_4
 nodist_libtrace_la_SOURCES = dagopts.c dagapi.c
 endif
