Added more tests

--- a/test/Makefile
+++ b/test/Makefile
@@ -8,7 +8,8 @@ CFLAGS += $(INCLUDE)
 libdir = $(PREFIX)/lib/.libs
 LDLIBS = -L$(libdir) -ltrace
 
-BINS = test1 test2 test-pcap test-pcap-bpf test-erf-write
+BINS = test1 test2 test-pcap test-pcap-bpf test-erf-write test-erf-to-pcap \
+	test-pcap-to-erf test-wtf
 .PHONY: all clean distclean install depend test
 
 all: $(BINS) 
