Tidy up the tools and tests

--- a/test/Makefile
+++ b/test/Makefile
@@ -3,24 +3,41 @@ PREFIX=../
 CC=gcc
 
 INCLUDE = -I$(PREFIX)/lib
-CFLAGS = -Wall -Wimplicit -Wformat -pipe -g -O2 -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE
+CFLAGS = -Wall -Wimplicit -Wformat -pipe -g -O2 -D_FILE_OFFSET_BITS=64 \
+		-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE
 CFLAGS += $(INCLUDE)
 libdir = $(PREFIX)/lib/.libs
 LDLIBS = -L$(libdir) -ltrace
 
-BINS = test1 test2 test-pcap test-pcap-bpf test-erf-write test-erf-to-pcap \
-	test-pcap-to-erf test-wtf test-rtclient test-event test-time \
-	test-seek
+BINS = test-pcap-bpf test-event test-time test-seek 
+
 .PHONY: all clean distclean install depend test
 
 all: $(BINS) 
 
-test: all
-	for i in $(BINS); do					\
+test: all test-format-all test-convert-all		
+	@for i in $(BINS); do					\
 		echo \* $$i; 					\
 		LD_LIBRARY_PATH=$(libdir)			\
 		 ./$$i || exit $$?;				\
 	done				
+	@echo All tests passed
+
+test-format-all: test-format
+	@for i in erf pcap wtf ; do			\
+		echo \* $$i;					\
+		./test-format $$i || exit $$?;			\
+	done
+	
+test-convert-all: test-convert
+	@for i in erf pcap wtf rtclient; do			\
+		for j in erf pcap ; do				\
+			echo \* $$i -\> $$j;			\
+			./test-convert $$i $$j || exit $$?;	\
+		done;						\
+	done							
+	./test-convert wtf wtf
+
  
 clean:
 	$(RM) $(BINS) $(OBJS) 
@@ -30,6 +47,5 @@ distclean:
 
 install:
 	@true
-
 
 # vim: noet ts=8 sw=8
