--- a/tools/tracesplit/Makefile.am
+++ b/tools/tracesplit/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = tracesplit
+bin_PROGRAMS = tracesplit tracesplit_dir
 bin_SCRIPTS = tracefilter traceconvert
 
 man_MANS = tracesplit.1 tracefilter.1 traceconvert.1
@@ -6,3 +6,4 @@ EXTRA_DIST = $(man_MANS) $(bin_SCRIPTS)
 
 include ../Makefile.tools
 tracesplit_SOURCES = tracesplit.c
+tracesplit_dir_SOURCES = tracesplit_dir.c
