--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -4,7 +4,7 @@ include_HEADERS = libtrace.h dagformat.h wag.h lt_inttypes.h daglegacy.h rt_prot
 extra_DIST = format_template.c
 libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h \
 		format_erf.c format_pcap.c format_wag.c format_legacy.c format_rt.c\
-		format_helper.c format_helper.h \
+		format_helper.c format_helper.h format_linux.c \
 		parse_cmd.c parse_cmd.h libtrace_int.h lt_inttypes.h \
 		linktypes.c protocols.c
 
