--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -6,7 +6,12 @@ libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h \
 		format_erf.c format_pcap.c format_wag.c format_legacy.c format_rt.c\
 		format_helper.c format_helper.h format_linux.c \
 		parse_cmd.c parse_cmd.h libtrace_int.h lt_inttypes.h \
-		linktypes.c protocols.c
+		linktypes.c protocols.c 
+if HAVE_ZLIB
+libtrace_la_SOURCES+=libtraceio-zlib.c
+else
+libtrace_la_SOURCES+=libtraceio-stdio.c
+endif
 
 if DAG2_4
 nodist_libtrace_la_SOURCES = dagopts.c dagapi.c
