Add tests for pcapfile:

--- a/test/Makefile
+++ b/test/Makefile
@@ -24,7 +24,7 @@ test: all test-format-all test-convert-all
 	@echo All tests passed
 
 test-format-all: test-format
-	@for i in erf pcap wtf ; do			\
+	@for i in erf pcap wtf pcapfile; do			\
 		echo \* $$i;					\
 		LD_LIBRARY_PATH=$(libdir)			\
 		./test-format $$i || exit $$?;			\
@@ -36,8 +36,9 @@ test-convert-all: test-convert
 	@LD_LIBRARY_PATH=$(libdir) ./test-convert erf erf
 	@LD_LIBRARY_PATH=$(libdir) ./test-convert erf pcap
 	@LD_LIBRARY_PATH=$(libdir) ./test-convert pcap erf
-	@LD_LIBRARY_PATH=$(libdir) ./test-convert rtclient erf
-	@LD_LIBRARY_PATH=$(libdir) ./test-convert rtclient pcap
+	@LD_LIBRARY_PATH=$(libdir) ./test-convert pcapfile erf
+	#@LD_LIBRARY_PATH=$(libdir) ./test-convert rtclient erf
+	#@LD_LIBRARY_PATH=$(libdir) ./test-convert rtclient pcap
 	@LD_LIBRARY_PATH=$(libdir) ./test-convert wtf pcap
 	@LD_LIBRARY_PATH=$(libdir) ./test-convert wtf wtf
  
