Fixed the Makefile to include libtraceio.h when doing a 'make dist' Multiple rt clients no longer share the same reliability variable

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,12 +1,12 @@
 lib_LTLIBRARIES = libtrace.la
-include_HEADERS = libtrace.h dagformat.h wag.h lt_inttypes.h daglegacy.h rt_protocol.h
+include_HEADERS = libtrace.h dagformat.h wag.h lt_inttypes.h daglegacy.h rt_protocol.h libtraceio.h
 
 extra_DIST = format_template.c
 libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h \
 		format_erf.c format_pcap.c format_wag.c format_legacy.c \
 		format_rt.c format_helper.c format_helper.h format_pcapfile.c \
 		parse_cmd.c parse_cmd.h libtrace_int.h lt_inttypes.h \
-		linktypes.c protocols.c 
+		linktypes.c protocols.c libtraceio.h 
 if HAVE_NETPACKET_PACKET_H
 libtrace_la_SOURCES+=format_linux.c
 endif
