Added winpcap support to the Visual Studio infrastructure. Until we get some sort of autoconf replacement winpcap is a hard requirement unless you manually edit config-win.h to remove the HAVE_PCAP, HAVE_BPF, etc directives.

--- a/libtrace.vcproj
+++ b/libtrace.vcproj
@@ -134,7 +134,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;H:\src\libtrace-win&quot;"
+				AdditionalIncludeDirectories="&quot;G:\Program Files\WpdPack\Include&quot;;&quot;H:\src\libtrace-win&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;BUILDING_DLL"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -160,10 +160,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Ws2_32.lib"
+				AdditionalDependencies="Ws2_32.lib wpcap.lib"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories=""
+				AdditionalLibraryDirectories="&quot;G:\Program Files\WpdPack\Lib&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug/libtrace.pdb"
 				SubSystem="1"
