--- a/configure.in
+++ b/configure.in
@@ -1,14 +1,26 @@
 # Process this file with autoconf to produce a configure script.
 
+# Now you only need to update the version number in two places - below,
+# and in the README
+
+AC_INIT(libtrace,3.0.0,[contact@wand.net.nz],libtrace)
+
 LIBTRACE_MAJOR=3
 LIBTRACE_MID=0
 LIBTRACE_MINOR=0
 
-AC_INIT(libtrace,3.0.0,[contact@wand.net.nz],libtrace)
 AC_CONFIG_SRCDIR(lib/trace.c)
-AM_INIT_AUTOMAKE(libtrace,3.0.0)
+AM_INIT_AUTOMAKE
 
-AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile tools/Makefile tools/traceanon/Makefile tools/tracedump/Makefile tools/tracemerge/Makefile tools/tracereport/Makefile tools/tracertstats/Makefile tools/tracesplit/Makefile tools/tracestats/Makefile ])
+AC_DEFINE([LIBTRACE_MAJOR],${LIBTRACE_MAJOR},[libtrace major version])
+AC_DEFINE([LIBTRACE_MID],${LIBTRACE_MID},[libtrace mid version])
+AC_DEFINE([LIBTRACE_MINOR],${LIBTRACE_MINOR},[libtrace minor version])
+
+AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile
+	tools/Makefile tools/traceanon/Makefile tools/tracedump/Makefile 
+	tools/tracemerge/Makefile tools/tracereport/Makefile 
+	tools/tracertstats/Makefile tools/tracesplit/Makefile 
+	tools/tracestats/Makefile docs/libtrace.doxygen lib/libtrace.h])
 dnl GNU C library
 dnl AC_GNU_SOURCE
 
@@ -382,6 +394,10 @@ AC_SUBST([ADD_LDFLAGS])
 AC_SUBST([ADD_INCLS])
 AC_SUBST([LTLIBOBJS])
 AC_SUBST([MANPAGES])
+AC_SUBST([PACKAGE_VERSION])
+AC_SUBST([LIBTRACE_MAJOR])
+AC_SUBST([LIBTRACE_MID])
+AC_SUBST([LIBTRACE_MINOR])
 
 dnl and finally, output our Makefiles
 AC_OUTPUT
@@ -394,6 +410,7 @@ reportopt() {
 	fi
 }
 
+AC_MSG_NOTICE([Libtrace version $PACKAGE_VERSION])
 reportopt "Compiled with BPF filter support" $libtrace_bpf 
 reportopt "Compiled with PCAP support" $libtrace_pcap
 reportopt "Compiled with compressed trace (zlib) support" $libtrace_zlib
