--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -23,7 +23,7 @@ endif
 
 INCLUDES = @ADD_INCLS@
 libtrace_la_LIBADD = @ADD_LIBS@ @LTLIBOBJS@
-libtrace_la_LDFLAGS=-version-info 3:0:0 @ADD_LDFLAGS@
+libtrace_la_LDFLAGS=-version-info @LIBTRACE_MAJOR@:@LIBTRACE_MINOR@:@LIBTRACE_MID@ @ADD_LDFLAGS@
 
 dagapi.c:
 	cp @DAG_TOOLS_DIR@/dagapi.c .
