Fixed memory leak in trace_event_trace Wrote an example using the event framework Removed old event examples Updated format_pcapfile to use libtrace_direction_t erf_read_packet now checks that malloc()ing a buffer actually succeeds

--- a/examples/event/Makefile
+++ b/examples/event/Makefile
@@ -1,5 +1,5 @@
 
-PREFIX=/usr/local
+PREFIX=/usr/local/
 CC=gcc
 
 INCLUDE = -I$(PREFIX)/include
@@ -8,7 +8,7 @@ CFLAGS  += $(INCLUDE)
 LDFLAGS = -L$(PREFIX)/lib
 LDLIBS  = -ltrace
 
-BINS = rate rate-tracetime
+BINS = event_example 
 .PHONY: all clean distclean install depend
 
 all: $(BINS) 
