Removed out-of-date examples Moved output and event examples to skeleton directory

--- a/examples/skeleton/Makefile
+++ b/examples/skeleton/Makefile
@@ -2,7 +2,7 @@ CFLAGS=-g -Wall -W -pedantic -I../../lib
 LDFLAGS=-L../../lib/.libs
 LDLIBS=-ltrace
 
-all: trivial complete
+all: trivial complete event output
 
 clean:
 	rm -f trivial complete *.o
