--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -56,6 +56,8 @@
  */
 
 #include <sys/types.h>
+#include <sys/time.h>
+
 #ifdef _MSC_VER
     /* define the following from MSVC's internal types */
     typedef		__int8	int8_t;
@@ -97,6 +99,8 @@
 #else
 #    include <netinet/in.h>
 #    include <stdbool.h>
+#    include <sys/types.h>
+#    include <sys/socket.h>
 #endif
 
 /** API version as 2 byte hex digits, eg 0xXXYYZZ */
@@ -118,7 +122,7 @@ extern "C" {
 #else
 #  define SIMPLE_FUNCTION
 #  define UNUSED
-#  define PACKED __declspec(align(1))
+#  define PACKED 
 #  define CONSTRUCTOR
 #endif
 	
