--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -98,7 +98,11 @@
 #    endif    
 #else
 #    include <netinet/in.h>
+
+#ifndef __cplusplus
 #    include <stdbool.h>
+#endif
+
 #    include <sys/types.h>
 #    include <sys/socket.h>
 #endif
