Fixed segmentation faults when trace_destroy is called on a trace that wasn't successfully created libdl is now checked for and only linked against if available (BSD's don't have a libdl) Fixed the libpacketdump .so's to use libtrace's generic protocol headers as well as trace_ether_ntoa Added missing check for strlcpy Added a couple of #defines to various tools that needed them under FreeBSD Removed some needless #includes from the libpacketdump .so's

--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -14,7 +14,7 @@ libpacketdump_la_SOURCES = libpacketdump.cc $(PLUGINSOURCES)
 PLUGINDIR=$(libdir)/libpacketdump
 
 INCLUDES= @ADD_INCLS@ -I../lib -I../
-libpacketdump_la_LIBADD = @ADD_LIBS@  -ldl
+libpacketdump_la_LIBADD = @ADD_LIBS@  
 libpacketdump_la_LDFLAGS=\
 	-version-info @LIBTRACE_MAJOR@:@LIBTRACE_MINOR@:@LIBTRACE_MID@ \
 	@ADD_LDFLAGS@
@@ -32,7 +32,7 @@ clean-local:
 	rm -f $(PLUGINS)
 
 install-exec-local:
-	for plugin in $(PLUGINS); do install -D -m 755 $$plugin $(DESTDIR)$(PLUGINDIR)/$$plugin; done
+	mkdir -p $(DESTDIR)$(PLUGINDIR); for plugin in $(PLUGINS); do install -m 755 $$plugin $(DESTDIR)$(PLUGINDIR)/$$plugin; done
 
 uninstall-local:
 	for plugin in $(PLUGINS); do rm -f $(PLUGINDIR)/$$plugin; done
