--- a/tools/tracedump/Makefile.am
+++ b/tools/tracedump/Makefile.am
@@ -4,4 +4,4 @@ EXTRA_DIST = $(man_MANS)
 
 include ../Makefile.tools
 tracedump_SOURCES = tracedump.cc
-tracedump_LDADD = -ltrace -lpacketdump -ldl
+tracedump_LDADD = -ltrace -lpacketdump  
