--- a/configure.in
+++ b/configure.in
@@ -31,7 +31,7 @@ dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_INSTALL
-AC_LIBTOOL_DLOPEN
+#AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
 
 AC_CONFIG_LIBOBJ_DIR(lib)
@@ -46,7 +46,7 @@ AC_SYS_LARGEFILE
 
 # Checks for library functions.
 AC_PROG_GCC_TRADITIONAL
-AC_CHECK_FUNCS(socket strdup)
+AC_CHECK_FUNCS(socket strdup strlcpy)
 
 AC_CHECK_SIZEOF([long int])
 
@@ -131,6 +131,15 @@ fi
 AC_CHECK_HEADER(gdc.h,
 	     [AC_DEFINE(HAVE_GDC_H,1,[Conditional for building with libGDC support]) libtrace_gdc=true],
 	     [AC_DEFINE(HAVE_GDC_H,0,[Conditional for building with libGDC support]) libtrace_gdc=false])
+
+# Check to see if we have libdl - *BSD has built-in libdl
+AC_CHECK_LIB(dl, dlopen, libtrace_dl=true, libtrace_dl=false)
+if test "$libtrace_dl" = true; then
+	AC_DEFINE(HAVE_LIBDL,1,[Conditional for building with dynamic library support])
+	ADD_LIBS="$ADD_LIBS -ldl"
+else
+	AC_DEFINE(HAVE_LIBDL,0,[Conditional for building with dynamic library support])
+fi
 
 
 # Check to see if we have libpcap
