dag_read_packet now returns a DUCK packet occasionally in place of a regular packet - changing the DUCK frequency will *soon* be a config option wag_start and wag_pause will now turn the radio on and off, respectively Added DUCK structures to rt_protocol.h for use with RT_DUCK_* packets Updated format_rt to deal with RT_DUCK properly Removed erroneous free(packet->buffer) when packet is not under our control in format_pcap. Added check for DAG 2.4 in configure

--- a/configure.in
+++ b/configure.in
@@ -337,6 +337,7 @@ if test "$with_dag" != no; then
 	AC_MSG_CHECKING(if we are using DAG 2.4)
 	if grep '2.4.' $dag_root/VERSION > /dev/null 2>&1; then
 		libtrace_dag2_4=true
+		AC_DEFINE(DAG_VERSION_2_4, 1, [define if using DAG 2.4])
 	else
 		libtrace_dag2_4=false
 	fi
