Added a new format for reading and writing DUCK packets Added corresponding test cases for DUCK Removed references to RT_DUCK_* from format_rt Added a configuration option for meta-data frequency (used solely for DUCK frequency at the moment) and updated other formats to ignore the option

--- a/test/Makefile
+++ b/test/Makefile
@@ -24,7 +24,7 @@ test: all test-format-all test-convert-all
 	@echo All tests passed
 
 test-format-all: test-format
-	@for i in erf pcap wtf pcapfile; do			\
+	@for i in erf pcap wtf pcapfile duck; do			\
 		echo \* $$i;					\
 		LD_LIBRARY_PATH=$(libdir)			\
 		./test-format $$i || exit $$?;			\
@@ -41,6 +41,7 @@ test-convert-all: test-convert
 	#@LD_LIBRARY_PATH=$(libdir) ./test-convert rtclient pcap
 	@LD_LIBRARY_PATH=$(libdir) ./test-convert wtf pcap
 	@LD_LIBRARY_PATH=$(libdir) ./test-convert wtf wtf
+	@LD_LIBRARY_PATH=$(libdir) ./test-convert duck duck
  
 clean:
 	$(RM) $(BINS) $(OBJS) test-format
