--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -532,7 +532,8 @@ DLLEXPORT int trace_start_output(libtrace_out_t *libtrace);
 typedef enum {
 	TRACE_OPTION_SNAPLEN, /**< Number of bytes captured */
 	TRACE_OPTION_PROMISC, /**< Capture packets to other hosts */
-	TRACE_OPTION_FILTER   /**< Apply this filter to all packets recieved */
+	TRACE_OPTION_FILTER,  /**< Apply this filter to all packets recieved */
+	TRACE_META_FREQ	      /**< Frequency of meta-data information, e.g. DUCK packets */
 } trace_option_t;
 
 /** Sets an input config option
@@ -1217,7 +1218,8 @@ enum base_format_t {
         TRACE_FORMAT_LEGACY_ATM   =6,
 	TRACE_FORMAT_LEGACY_POS	  =7,
 	TRACE_FORMAT_LEGACY_ETH   =8,
-	TRACE_FORMAT_LINUX_NATIVE =9
+	TRACE_FORMAT_LINUX_NATIVE =9,
+	TRACE_FORMAT_DUCK	  =10
 };
 
 /** Gets the format type for a given packet.
