--- a/configure.in
+++ b/configure.in
@@ -17,6 +17,7 @@ AC_DEFINE([LIBTRACE_MID],${LIBTRACE_MID},[libtrace mid version])
 AC_DEFINE([LIBTRACE_MINOR],${LIBTRACE_MINOR},[libtrace minor version])
 
 AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile
+	libpacketdump/parser/Makefile
 	tools/Makefile tools/traceanon/Makefile tools/tracedump/Makefile 
 	tools/tracemerge/Makefile tools/tracereport/Makefile 
 	tools/tracertstats/Makefile tools/tracesplit/Makefile 
@@ -33,6 +34,8 @@ AC_PROG_CXX
 AC_PROG_INSTALL
 #AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
+AC_PROG_YACC
+AC_PROG_LEX
 
 AC_CONFIG_LIBOBJ_DIR(lib)
 
