Updated the parsers Makefile.am to actually make use of the results returned by the autoconf/automake magic.
The code compiles in Linux and FreeBSD now, though using the 'make dist' tarball in FreeBSD requires the *.tab.* files to be deleted. These are created by bison in Linux and are meant to be part of the dist so that whoever uses it doesn't need bison themselves...they dont seem to work nicely in FreeBSD for some reason?

--- a/libpacketdump/parser/Makefile.am
+++ b/libpacketdump/parser/Makefile.am
@@ -3,14 +3,16 @@ lib_LTLIBRARIES = libparser.la
 
 #libparser_la_SOURCES = libconfig.c libconfig.h config_internal.h config.lexer.c config.parser.h configuration.h config.parser.c
 libparser_la_SOURCES = parser.lexer.c parser.tab.c parser.h
-libparser_la_LIBADD = @ADD_LIBS@ -lfl
-libparser_la_LDFLAGS = @ADD_LDFLAGS@ -lfl
+libparser_la_LIBADD = @ADD_LIBS@ @LEXLIB@
+libparser_la_LDFLAGS = @ADD_LDFLAGS@ -L../
+INCLUDES = @ADD_INCLS@ -I../ -I../../lib
 
 EXTRA_DIST= parser.l parser.y
+BUILT_SOURCES=parser.tab.h
 
 
-%.tab.c: %.y
-	bison -d -o$@ $<
+%.tab.c %.tab.h: %.y
+	@YACC@ -d -o$@ $<
 
-%.lexer.c: %.l
-	flex -o$@ $<
+%.lexer.c: %.l %.tab.c
+	@LEX@ -o$@ $<
