Add new DUCK link type (for duck packets obviously). Make get_payload_from_link on a duck packet return "NULL" (no payload)

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -215,7 +215,8 @@ typedef enum {
        TRACE_TYPE_LINUX_SLL,		/**< Linux "null" framing */
        TRACE_TYPE_PFLOG,		/**< FreeBSD's PFlug */
        TRACE_TYPE_POS,
-       TRACE_TYPE_80211_PRISM = 12
+       TRACE_TYPE_80211_PRISM = 12,
+       TRACE_TYPE_DUCK,			/**< Pseudo link layer for DUCK packets */
      } libtrace_linktype_t;
 
 /** Trace directions 
